--- a/customer-template/package.json
+++ b/customer-template/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.5.1",
+    "bootstrap": "^5.3.2",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
     "pinia": "^2.1.6",
