--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,5 @@
-DB_URI=mongodb://127.0.0.1:27017/it-mentor
+DB_URI= mongodb+srv://phvntiendat:phvntiendat@cluster0.kfnejcg.mongodb.net/?retryWrites=true&w=majority
+PORT= 5000
 EXPIRESIN=2592000
 SECRETKEY=phvntiendat
 
