--- a/customer-template/package.json
+++ b/customer-template/package.json
@@ -9,6 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/vue-fontawesome": "^3.0.0-5",
+    "@heroicons/vue": "^2.0.18",
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
     "element-plus": "^2.3.14",
@@ -19,6 +23,7 @@
     "universal-cookie": "^6.1.1",
     "vue": "^3.3.4",
     "vue-facing-decorator": "^3.0.3",
+    "vue-heroicons": "^0.9.4",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
