adjust env file

--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
-DB_URI=mongodb://127.0.0.1:27017/it-mentor
-# DB_URI= mongodb+srv://phvntiendat:phvntiendat@cluster0.kfnejcg.mongodb.net/?retryWrites=true&w=majority
+# DB_URI=mongodb://127.0.0.1:27017/it-mentor
+DB_URI= mongodb+srv://phvntiendat:phvntiendat@cluster0.kfnejcg.mongodb.net/?retryWrites=true&w=majority
 PORT= 3001
 EXPIRESIN=2592000
 SECRETKEY=phvntiendat
