--- a/itmentor/pubspec.yaml
+++ b/itmentor/pubspec.yaml
@@ -39,6 +39,10 @@ dependencies:
   provider: ^6.0.5
   http: ^0.13.5
   shared_preferences: ^2.2.0
+  intl: ^0.18.1
+  flutter_slidable: ^2.0.0
+  image_picker: ^1.0.2
+  path_provider: ^2.1.0
 
 dev_dependencies:
   flutter_test:
