--- a/customer-template/tsconfig.json
+++ b/customer-template/tsconfig.json
@@ -5,7 +5,9 @@
     "moduleResolution": "node",
     "strict": true,
     "jsx": "preserve",
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true
   },
   "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "tests/**/*.ts"],
   "exclude": ["node_modules"]
