--- a/customer-template/package.json
+++ b/customer-template/package.json
@@ -11,19 +11,22 @@
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
-    "@fortawesome/vue-fontawesome": "^3.0.0-5",
+    "@fortawesome/vue-fontawesome": "^3.0.3",
     "@heroicons/vue": "^2.0.18",
+    "@vueup/vue-quill": "^1.0.0-beta.11",
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
     "element-plus": "^2.3.14",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
     "pinia": "^2.1.6",
+    "quill": "^1.3.7",
     "sweetalert2": "^11.7.31",
     "universal-cookie": "^6.1.1",
     "vue": "^3.3.4",
     "vue-facing-decorator": "^3.0.3",
     "vue-heroicons": "^0.9.4",
+    "vue-quill-editor": "^3.0.6",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
