--- a/itmentor/pubspec.yaml
+++ b/itmentor/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_slidable: ^2.0.0
   image_picker: ^1.0.2
   path_provider: ^2.1.0
+  fluttertoast: ^8.2.2
 
 dev_dependencies:
   flutter_test:
