--- a/customer-template/package.json
+++ b/customer-template/package.json
@@ -20,6 +20,7 @@
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
     "pinia": "^2.1.6",
+    "qalendar": "^3.5.0",
     "quill": "^1.3.7",
     "sweetalert2": "^11.7.31",
     "universal-cookie": "^6.1.1",
