--- a/customer-template/package.json
+++ b/customer-template/package.json
@@ -12,6 +12,11 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/vue-fontawesome": "^3.0.3",
+    "@fullcalendar/core": "^6.1.9",
+    "@fullcalendar/daygrid": "^6.1.9",
+    "@fullcalendar/interaction": "^6.1.9",
+    "@fullcalendar/timegrid": "^6.1.9",
+    "@fullcalendar/vue3": "^6.1.9",
     "@heroicons/vue": "^2.0.18",
     "@vueup/vue-quill": "^1.0.0-beta.11",
     "axios": "^1.5.1",
