--- a/itmentor/pubspec.yaml
+++ b/itmentor/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   image_picker: ^1.0.2
   path_provider: ^2.1.0
   fluttertoast: ^8.2.2
+  table_calendar: ^3.0.9
+  flutter_event_calendar: ^1.0.0
 
 dev_dependencies:
   flutter_test:
@@ -81,6 +83,7 @@ flutter:
     - assets/icons/information_security_icon.png
     - assets/icons/networking_icon.png
     - assets/icons/software_icon.png
+    - assets/icons/done_icon.png
 
     - assets/course_icon/cplusplus_icon.png
     - assets/course_icon/csharp_icon.png
