upload media, update user info

--- a/backend/.env
+++ b/backend/.env
@@ -6,3 +6,10 @@ SECRETKEY=phvntiendat
 
 SECRETKEY_REFRESH=phvntiendat_refresh
 EXPIRESIN_REFRESH=2592000
+
+
+# AWS
+AWS_REGION=ap-southeast-1
+AWS_ACCESS_KEY_ID=AKIA56YWDAGDCIPTP34L
+AWS_SECRET_ACCESS_KEY=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
+AWS_PUBLIC_BUCKET_NAME=itmentor
