--- a/backend/.env
+++ b/backend/.env
@@ -13,3 +13,10 @@ AWS_REGION=ap-southeast-1
 AWS_ACCESS_KEY_ID=AKIA56YWDAGDCIPTP34L
 AWS_SECRET_ACCESS_KEY=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
 AWS_PUBLIC_BUCKET_NAME=itmentor
+
+# MAIL
+MAIL_HOST=smtp.gmail.com
+MAIL_USER=itmentorservice@gmail.com
+MAIL_PASSWORD=emyfxjnpsdfhxwrb
+MAIL_FROM=${MAIL_USER}
+MAIL_TRANSPORT=smtp://${MAIL_USER}:${MAIL_PASSWORD}@${MAIL_HOST}
