--- a/customer-template/.env
+++ b/customer-template/.env
@@ -1,1 +1,2 @@
-VITE_BASE_API="https://busy-pear-scorpion-garb.cyclic.app/"
+# VITE_BASE_API="https://busy-pear-scorpion-garb.cyclic.app/"
+VITE_BASE_API="https://pbl6-production.up.railway.app/"
