--- a/itmentor/pubspec.yaml
+++ b/itmentor/pubspec.yaml
@@ -20,7 +20,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.18.6 <3.0.0'
+  sdk: '>=2.18.6 <=3.1.5'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -48,6 +48,7 @@ dependencies:
   flutter_event_calendar: ^1.0.0
   cached_network_image: ^3.2.3
   flutter_widget_from_html: ^0.9.1
+  syncfusion_flutter_calendar: ^23.1.43
 
 dev_dependencies:
   flutter_test:
