feat: forget password

--- a/customer-template/.env
+++ b/customer-template/.env
@@ -1,1 +1,2 @@
-VITE_BASE_API="https://pbl-6-f524drp42-nt-myduyen.vercel.app/"
+# VITE_BASE_API="https://pbl-6-f524drp42-nt-myduyen.vercel.app/"
+VITE_BASE_API="https://pbl6-production.up.railway.app/"
