--- a/customer-template/tsconfig.json
+++ b/customer-template/tsconfig.json
@@ -7,7 +7,8 @@
     "jsx": "preserve",
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "isCustomElement": "tagName => tagName === 'vue-advanced-chat' || tagName === 'emoji-picker'"
   },
   "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "tests/**/*.ts"],
   "exclude": ["node_modules"]
