--- a/customer-template/package.json
+++ b/customer-template/package.json
@@ -31,6 +31,7 @@
     "sweetalert2": "^11.7.31",
     "universal-cookie": "^6.1.1",
     "vue": "^3.3.4",
+    "vue-advanced-chat": "^2.0.7",
     "vue-facing-decorator": "^3.0.3",
     "vue-heroicons": "^0.9.4",
     "vue-quill-editor": "^3.0.6",
