--- a/itmentor/pubspec.yaml
+++ b/itmentor/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   cached_network_image: ^3.2.3
   flutter_widget_from_html: ^0.9.1
   syncfusion_flutter_calendar: ^23.1.43
+  date_picker_timeline: ^1.2.5
 
 dev_dependencies:
   flutter_test:
