schedule safe deletion

--- a/backend/.env
+++ b/backend/.env
@@ -1,11 +1,14 @@
-# DB_URI=mongodb://127.0.0.1:27017/it-mentor
-DB_URI= mongodb+srv://phvntiendat:phvntiendat@cluster0.kfnejcg.mongodb.net/?retryWrites=true&w=majority
 PORT= 3001
+
+#JWT
 EXPIRESIN=259200000
 SECRETKEY=phvntiendat
 SECRETKEY_REFRESH=phvntiendat_refresh
 EXPIRESIN_REFRESH=259200000
 
+# MONGODB
+# DB_URI=mongodb://127.0.0.1:27017/it-mentor
+DB_URI= mongodb+srv://phvntiendat:phvntiendat@cluster0.kfnejcg.mongodb.net/?retryWrites=true&w=majority
 
 # AWS
 AWS_REGION=ap-southeast-1
