--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,20 +1,30 @@
-DB_URI=
 PORT= 
+
+#JWT
 EXPIRESIN=
 SECRETKEY=
-
 SECRETKEY_REFRESH=
 EXPIRESIN_REFRESH=
 
+# MONGODB
+DB_URI=
 
+# AWS
 AWS_REGION=
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_PUBLIC_BUCKET_NAME=
 
-
+# MAIL
 MAIL_HOST=
 MAIL_USER=
 MAIL_PASSWORD=
 MAIL_FROM=${MAIL_USER}
 MAIL_TRANSPORT=smtp://${MAIL_USER}:${MAIL_PASSWORD}@${MAIL_HOST}
+
+# MOMO
+ACCESS_KEY=
+SECRET_KEY=
+PARTNER_CODE=
+REDIRECT_URL=
+IPN_URL=
