--- a/backend/package.json
+++ b/backend/package.json
@@ -45,7 +45,8 @@
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
-    "socket.io": "^4.7.2"
+    "socket.io": "^4.7.2",
+    "unidecode": "^0.1.8"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.1.18",
