--- a/itmentor/pubspec.yaml
+++ b/itmentor/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   flutter_widget_from_html: ^0.9.1
   syncfusion_flutter_calendar: ^23.1.43
   date_picker_timeline: ^1.2.5
+  url_launcher: ^6.0.0
 
 dev_dependencies:
   flutter_test:
