--- a/backend/.env
+++ b/backend/.env
@@ -27,5 +27,5 @@ MAIL_TRANSPORT=smtp://${MAIL_USER}:${MAIL_PASSWORD}@${MAIL_HOST}
 ACCESS_KEY=klm05TvNBzhg7h7j
 SECRET_KEY=at67qH6mk8w5Y1nAyMoYKMWACiEi2bsa
 PARTNER_CODE=MOMOBKUN20180529
-REDIRECT_URL=https://momo.vn/return
-IPN_URL=https://callback.url/notify
+REDIRECT_URL=https://pbl-6-seven.vercel.app/
+IPN_URL=https://pbl6-production.up.railway.app/payment/ipn
