--- a/customer-template/tsconfig.json
+++ b/customer-template/tsconfig.json
@@ -8,6 +8,9 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
+    "paths": {
+      "@/*": ["src/*"]
+    },
     "isCustomElement": "tagName => tagName === 'vue-advanced-chat' || tagName === 'emoji-picker'"
   },
   "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "tests/**/*.ts"],
