--- a/customer-template/package.json
+++ b/customer-template/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "npx http-server ./dist",
     "dev": "vite",
+    "test": "vitest",
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview"
   },
@@ -39,13 +40,17 @@
     "vue3-marquee": "^4.1.0"
   },
   "devDependencies": {
+    "@testing-library/vue": "^8.0.1",
     "@types/bootstrap": "^5.2.7",
     "@vitejs/plugin-vue": "^4.2.3",
+    "@vue/test-utils": "^2.4.2",
     "autoprefixer": "^10.4.16",
+    "happy-dom": "^12.10.3",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
+    "vitest": "^0.34.6",
     "vue-tsc": "^1.8.5"
   }
 }
