--- a/customer-template/tsconfig.json
+++ b/customer-template/tsconfig.json
@@ -8,6 +8,7 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
+    "types": ["vitest/globals"],
     "paths": {
       "@/*": ["src/*"]
     },
