--- a/customer-template/package.json
+++ b/customer-template/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "npx http-server ./dist",
     "dev": "vite",
+    "test": "vitest",
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview"
   },
