--- a/itmentor/pubspec.yaml
+++ b/itmentor/pubspec.yaml
@@ -51,9 +51,13 @@ dependencies:
   syncfusion_flutter_calendar: ^23.1.43
   date_picker_timeline: ^1.2.5
   url_launcher: ^6.0.0
+  flutter_spinkit: ^5.2.0
+  flutter_staggered_grid_view: ^0.4.0
 
 dev_dependencies:
   flutter_test:
+    sdk: flutter
+  integration_test:
     sdk: flutter
 
   # The "flutter_lints" package below contains a set of recommended lints to
