--- a/customer-template/package.json
+++ b/customer-template/package.json
@@ -42,13 +42,15 @@
   },
   "devDependencies": {
     "@types/bootstrap": "^5.2.7",
+    "@types/jest": "^29.5.10",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vue/test-utils": "^2.4.2",
     "autoprefixer": "^10.4.16",
     "cypress": "^13.6.0",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.3",
-    "typescript": "^5.0.2",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.3.2",
     "vite": "^4.4.5",
     "vue-tsc": "^1.8.5"
   }
