--- a/customer-template/package.json
+++ b/customer-template/package.json
@@ -41,6 +41,7 @@
   },
   "devDependencies": {
     "@types/bootstrap": "^5.2.7",
+    "@types/cypress": "^1.1.3",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vue/test-utils": "^2.4.2",
     "autoprefixer": "^10.4.16",
