validate password, change retrieve password generation

--- a/customer-template/.env
+++ b/customer-template/.env
@@ -1,1 +1,2 @@
-VITE_BASE_API="https://pbl6-production.up.railway.app/"
+# VITE_BASE_API="https://pbl6-production.up.railway.app/"
+VITE_BASE_API="http://localhost:3001/"
