--- a/itmentor/pubspec.yaml
+++ b/itmentor/pubspec.yaml
@@ -53,6 +53,8 @@ dependencies:
   url_launcher: ^6.0.0
   flutter_spinkit: ^5.2.0
   flutter_staggered_grid_view: ^0.4.0
+  chewie: ^1.5.0
+  video_player: ^2.6.0
 
 dev_dependencies:
   flutter_test:
