added video duration on route get course by id, format mail date

--- a/backend/package.json
+++ b/backend/package.json
@@ -37,6 +37,9 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "es6-promise": "^4.2.8",
+    "ffmpeg-static": "^5.2.0",
+    "fluent-ffmpeg": "^2.1.2",
+    "get-video-duration": "^4.1.0",
     "hbs": "^4.2.0",
     "mongoose": "^7.5.3",
     "nodemailer": "^6.9.7",
