--- a/itmentor/android/app/src/main/AndroidManifest.xml
+++ b/itmentor/android/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
     <uses-permission android:name="android.permission.INTERNET"/>
 
    <application
-        android:label="itmentor"
+        android:label="IT Mentor"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
