--- a/itmentor/pubspec.yaml
+++ b/itmentor/pubspec.yaml
@@ -55,12 +55,21 @@ dependencies:
   flutter_staggered_grid_view: ^0.4.0
   chewie: ^1.5.0
   video_player: ^2.6.0
+  flutter_launcher_icons: ^0.13.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   integration_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.13.1
+
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "dev_assets/app_icon1.png"
+  min_sdk_android: 21
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
