--- a/customer-template/package.json
+++ b/customer-template/package.json
@@ -22,6 +22,7 @@
     "@fullcalendar/timegrid": "^6.1.9",
     "@fullcalendar/vue3": "^6.1.9",
     "@heroicons/vue": "^2.0.18",
+    "@videojs-player/vue": "^1.0.0",
     "@vueup/vue-quill": "^1.0.0-beta.11",
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
@@ -32,6 +33,7 @@
     "quill": "^1.3.7",
     "sweetalert2": "^11.7.31",
     "universal-cookie": "^6.1.1",
+    "video.js": "^8.9.0",
     "vue": "^3.3.4",
     "vue-advanced-chat": "^2.0.7",
     "vue-facing-decorator": "^3.0.3",
