--- a/customer-template/package.json
+++ b/customer-template/package.json
@@ -40,6 +40,7 @@
     "vue-heroicons": "^0.9.4",
     "vue-quill-editor": "^3.0.6",
     "vue-router": "^4.2.5",
+    "vue3-carousel": "^0.3.1",
     "vue3-marquee": "^4.1.0"
   },
   "devDependencies": {
